--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <body>
     <h1 id="text">nothing but text content in this head</h1>
     <button id="blah">to change inner text of an html</button>
+    <input type="text" minlength="10">
     <script src="C:\Users\tuvij\Desktop\basics\app.js"></script>
 </body>
 </html>
