added new elements

--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
     <h1 id="text">nothing but text content in this head</h1>
     <button id="blah">to change inner text of an html</button>
     <input type="text" minlength="10">
+    <p>hlo this is something random text i want to include</p>
+    <h2>and this text for style branch</h2>
     <script src="C:\Users\tuvij\Desktop\basics\app.js"></script>
 </body>
 </html>
